BaseServices/overlays/admin_with_ui/webui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-svc
  namespace: admin
spec:
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
