BaseServices/overlays/admin_with_ui/webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-ingress
  namespace: admin
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: platform.<YOUR_TAILSCALE_IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webui-svc
            port:
              number: 80
